--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Dima/Documents/BankApp/javafx-dialogs-0.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dima/Documents/BankApp/jfxtras-labs-2.2-r6.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/Dima/Documents/BankApp/jfxtras-labs-2.2-r6-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
